Add PointCloud2 calculation (need to test on STOC camera in the lab). Add forgotten whitebalance adjustment (still does not do anything, ask Videre folks about it?)

--- a/arrg/ua_drivers/videre_stereo_cam/cfg/VidereStereoCam.cfg
+++ b/arrg/ua_drivers/videre_stereo_cam/cfg/VidereStereoCam.cfg
@@ -50,9 +50,10 @@ videre_mode = gen.enum([gen.const("PROC_MODE_NONE",          str_t, "none",     
                         gen.const("PROC_MODE_TEST",          str_t, "test",          "Test image")],
                         "Amount of processing done on camera if STOC.")
 
-gen.add("videre_mode",      str_t,  SensorLevels.RECONFIGURE_STOP, "Amount of processing done on camera if STOC", "none", edit_method = videre_mode)
-gen.add("calculate_points", bool_t, SensorLevels.RECONFIGURE_STOP, "Calculate point cloud from disparity", True)
-gen.add("convert_to_color", bool_t, SensorLevels.RECONFIGURE_STOP, "Calculate color from Bayer pattern", True)
+gen.add("videre_mode",       str_t,  SensorLevels.RECONFIGURE_STOP, "Amount of processing done on camera if STOC", "none", edit_method = videre_mode)
+gen.add("calculate_points",  bool_t, SensorLevels.RECONFIGURE_STOP, "Calculate point cloud from disparity", True)
+gen.add("calculate_points2", bool_t, SensorLevels.RECONFIGURE_STOP, "Calculate point cloud from disparity in new format", False)
+gen.add("convert_to_color",  bool_t, SensorLevels.RECONFIGURE_STOP, "Calculate color from Bayer pattern", True)
 
 gen.add("brightness_auto", bool_t, SensorLevels.RECONFIGURE_RUNNING, "Auto adjust brightness", True)
 gen.add("brightness",      int_t,  SensorLevels.RECONFIGURE_RUNNING, "Brightness level if not auto", 50, 0, 255)
