--- a/arrg/ua_drivers/videre_stereo_cam/cfg/VidereStereoCam.cfg
+++ b/arrg/ua_drivers/videre_stereo_cam/cfg/VidereStereoCam.cfg
@@ -51,9 +51,9 @@ videre_mode = gen.enum([gen.const("PROC_MODE_NONE",          str_t, "none",     
                         "Amount of processing done on camera if STOC.")
 
 gen.add("videre_mode",       str_t,  SensorLevels.RECONFIGURE_STOP, "Amount of processing done on camera if STOC", "none", edit_method = videre_mode)
-gen.add("calculate_points",  bool_t, SensorLevels.RECONFIGURE_STOP, "Calculate point cloud from disparity", True)
+gen.add("calculate_points",  bool_t, SensorLevels.RECONFIGURE_STOP, "Calculate point cloud from disparity", False)
 gen.add("calculate_points2", bool_t, SensorLevels.RECONFIGURE_STOP, "Calculate point cloud from disparity in new format", False)
-gen.add("convert_to_color",  bool_t, SensorLevels.RECONFIGURE_STOP, "Calculate color from Bayer pattern", True)
+gen.add("convert_to_color",  bool_t, SensorLevels.RECONFIGURE_STOP, "Calculate color from Bayer pattern", False)
 
 gen.add("brightness_auto", bool_t, SensorLevels.RECONFIGURE_RUNNING, "Auto adjust brightness", True)
 gen.add("brightness",      int_t,  SensorLevels.RECONFIGURE_RUNNING, "Brightness level if not auto", 50, 0, 255)
@@ -70,12 +70,12 @@ gen.add("whitebalance_red",  int_t,  SensorLevels.RECONFIGURE_RUNNING, "Red/V le
 
 gen.add("companding", bool_t, SensorLevels.RECONFIGURE_RUNNING, "Bring up low light levels", True)
 gen.add("hdr",        bool_t, SensorLevels.RECONFIGURE_RUNNING, "High dynamic range", False)
-gen.add("frame_id",   str_t,  SensorLevels.RECONFIGURE_RUNNING, "The optical camera TF frame set in message headers", "stereo")
+gen.add("frame_id",   str_t,  SensorLevels.RECONFIGURE_RUNNING, "The optical camera TF frame set in message headers", "stereo_optical_frame")
 
 gen.add("uniqueness_threshold", int_t, SensorLevels.RECONFIGURE_RUNNING, "Filter out if best match does not sufficiently exceed the next-best match", 36, 0, 189)
 gen.add("texture_threshold",    int_t, SensorLevels.RECONFIGURE_RUNNING, "Filter out if SAD window response does not exceed texture threshold", 30, 0, 189)
 gen.add("speckle_size",         int_t, SensorLevels.RECONFIGURE_RUNNING, "Reject regions smaller than this size, pixels", 100, 0, 1000)
-gen.add("speckle_range",        int_t, SensorLevels.RECONFIGURE_RUNNING, "Max allowed difference between detected disparities", 4, 0, 31)
+gen.add("speckle_range",        int_t, SensorLevels.RECONFIGURE_RUNNING, "Max allowed difference between detected disparities", 10, 0, 31)
 gen.add("horopter",             int_t, SensorLevels.RECONFIGURE_RUNNING, "Change horopter", 0, 0, 63)
 
 exit(gen.generate('videre_stereo_cam', "videre_stereo_cam", "VidereStereoCam"))
