Extract Background Subtractor into a separate class, since it's being used in several places.

--- a/arrg/ua_vision/background_filters/CMakeLists.txt
+++ b/arrg/ua_vision/background_filters/CMakeLists.txt
@@ -13,17 +13,19 @@ rosbuild_gensrv()
 
 rosbuild_add_boost_directories()
 
-# OLD
 rosbuild_add_library(background_filters src/floor_filter.cpp)
 rosbuild_add_executable(floor_filter_node src/floor_filter_node.cpp)
 target_link_libraries(floor_filter_node background_filters)
-rosbuild_add_executable(overhead_filter src/overhead_filter.cpp)
 
 # NEW
 rosbuild_add_executable(background_averager src/background_averager.cpp)
-rosbuild_add_executable(background_subtractor src/background_subtractor.cpp)
-rosbuild_add_executable(object_tracker src/object_tracker.cpp)
+rosbuild_add_executable(background_subtractor src/background_subtractor.cpp
+                                              src/background_subtractor_node.cpp)
 rosbuild_add_executable(ground_filter src/ground_filter.cpp)
 
+# OLD
+#rosbuild_add_executable(overhead_filter src/overhead_filter.cpp)
+
 # BAD
-rosbuild_add_executable(background_sub_rewrite src/background_sub_rewrite.cpp)
+#rosbuild_add_executable(background_sub_rewrite src/background_sub_rewrite.cpp)
+#rosbuild_add_executable(object_tracker src/object_tracker.cpp)
