--- a/trunk/arrg/ua_vision/background_filters/CMakeLists.txt
+++ b/trunk/arrg/ua_vision/background_filters/CMakeLists.txt
@@ -17,11 +17,15 @@ rosbuild_add_library(background_filters src/floor_filter.cpp)
 rosbuild_add_executable(floor_filter_node src/floor_filter_node.cpp)
 target_link_libraries(floor_filter_node background_filters)
 
+rosbuild_add_executable(ground_filter src/ground_filter.cpp)
+
 # NEW
 rosbuild_add_executable(background_averager src/background_averager.cpp)
-rosbuild_add_executable(background_subtractor src/background_subtractor.cpp
-                                              src/background_subtractor_node.cpp)
-rosbuild_add_executable(ground_filter src/ground_filter.cpp)
+
+# Background subtractor
+rosbuild_add_library(background_subtractor src/background_subtractor.cpp)
+rosbuild_add_executable(background_subtractor_node src/background_subtractor_node.cpp)
+target_link_libraries(background_subtractor_node background_subtractor)
 
 # OLD
 #rosbuild_add_executable(overhead_filter src/overhead_filter.cpp)
