--- a/arrg/wubble_navigation/wubble_navigation_config/move_base/costmap_common_params.yaml
+++ b/arrg/wubble_navigation/wubble_navigation_config/move_base/costmap_common_params.yaml
@@ -1,7 +1,7 @@
-map_type: voxel
+map_type: costmap
 origin_z: 0.0
 z_voxels: 16
-z_resolution: 0.08
+z_resolution: 0.2
 
 transform_tolerance: 0.2
 obstacle_range: 2.5
