Added learning support to simulation_semantics (many changes), added time_series package which contains Java implementation of signature code, added new .asd to gbbopen to fix compilation problems

--- a/arrg/ua_cognition/gbbopen/Makefile
+++ b/arrg/ua_cognition/gbbopen/Makefile
@@ -1,4 +1,4 @@
-all: checkout test
+all: checkout build
 
 SVN_DIR = gbbopen
 SVN_URL = http://GBBopen.org/svn/GBBopen/trunk/
@@ -7,17 +7,11 @@ include $(shell rospack find mk)/svn_checkout.mk
 
 checkout: $(SVN_DIR)
 
-test:
-	if test -e gbbopen/patched; then echo "GBBopen already patched"; else make build; fi
-
 build: 
 	sh compile.sh
 	rm -rf asdf
 	mkdir asdf
-	patch gbbopen/gbbopen.asd -i gbbopen.patch -o gbbopen/gbbopen-patched.asd
-	rm gbbopen/gbbopen.asd
-	ln -s `(rospack find gbbopen)`/gbbopen/gbbopen-patched.asd asdf/gbbopen.asd 
-	touch gbbopen/patched
+	ln -s `(rospack find gbbopen)`/gbbopen/gbbopen.asd asdf/gbbopen.asd
 
 clean:
-	rm -rf patched rospack_nosubdirs gbbopen asdf
+	rm -rf rospack_nosubdirs gbbopen asdf/gbbopen.asd
