--- a/trunk/arrg/ua_experimental/time_series/.classpath
+++ b/trunk/arrg/ua_experimental/time_series/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry kind="lib" path="lib/time-series.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
 	<classpathentry kind="lib" path="eclipse_lib/rosjava.jar"/>
+	<classpathentry kind="lib" path="lib/rosjava_msgs.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-6-sun-1.6.0.20"/>
 	<classpathentry kind="lib" path="/home/dhewlett/ros/ros_experimental/rosjava/src"/>
 	<classpathentry kind="output" path="eclipse_bin"/>
