--- a/trunk/arrg/ua_experimental/time_series/CMakeLists.txt
+++ b/trunk/arrg/ua_experimental/time_series/CMakeLists.txt
@@ -36,4 +36,4 @@ message("Java JNI path is ${_jniexe_path}")
 
 # Add source & executables
 add_java_source_dir(${PROJECT_SOURCE_DIR}/src)
-rospack_add_java_executable(SimulationInterface edu.arizona.cs.learn.SimulationInterface)
+rospack_add_java_executable(SimulationInterface edu.arizona.SimulationInterface)
