--- a/trunk/arrg/ua_cognition/gbbopen/Makefile
+++ b/trunk/arrg/ua_cognition/gbbopen/Makefile
@@ -9,7 +9,6 @@ checkout: $(SVN_DIR)
 
 build: 
 	sh compile.sh
-	ln -s `(rospack find gbbopen)`/gbbopen/gbbopen.asd asdf/gbbopen.asd
-
+	if test -e asdf/gbbopen.asd; then echo "GBBopen already patched"; else ln -s `(rospack find gbbopen)`/gbbopen/gbbopen.asd asdf/gbbopen.asd; fi
 clean:
 	rm -rf rospack_nosubdirs gbbopen asdf/gbbopen.asd
