Moved code related to robot verb learning out of time_series and into verb_learning package. verb_learning also contains an early implementation of (L)RTDP for planning. wubble_mdp contains the OO-MDP environment interface for gazebo, and can "simulate" transitions in the state space as well.

--- a/arrg/ua_experimental/time_series/.classpath
+++ b/arrg/ua_experimental/time_series/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="time_series/" kind="src" path="src"/>
 	<classpathentry kind="src" path="srv/java"/>
 	<classpathentry kind="src" path="msg/java"/>
 	<classpathentry kind="lib" path="lib/time-series.jar"/>
