--- a/arrg/ua_experimental/verb_learning/CMakeLists.txt
+++ b/arrg/ua_experimental/verb_learning/CMakeLists.txt
@@ -25,22 +25,26 @@ rosbuild_gensrv()
 rosbuild_find_ros_package(time_series)
 rosbuild_find_ros_package(verb_learning)
 message("Found libs at ${time_series_PACKAGE_PATH}/lib")
+
 add_classpath("${time_series_PACKAGE_PATH}/bin") # This seems like a hack
 add_classpath("${time_series_PACKAGE_PATH}/lib")
 add_classpath("${verb_learning_PACKAGE_PATH}/lib")
 message("Java build classpath is ${_java_classpath}")
+
 add_runtime_classpath("${time_series_PACKAGE_PATH}/lib")
 add_runtime_classpath("${verb_learning_PACKAGE_PATH}/lib")
 message("Java runtime classpath is ${_java_runtime_classpath}")
+
 add_jar_dir("${time_series_PACKAGE_PATH}/lib")
 add_jar_dir("${verb_learning_PACKAGE_PATH}/lib")
 message("Java build classpath is ${_java_classpath}")
 message("Java runtime classpath is ${_java_runtime_classpath}")
+
 add_jni_path("${time_series_PACKAGE_PATH}/lib")
 add_jni_path("${verb_learning_PACKAGE_PATH}/lib")
 message("Java JNI path is ${_jniexe_path}")
 
 # Add source & executables
-#add_java_source_dir(${time_series_PACKAGE_PATH}/src)
 add_java_source_dir(${PROJECT_SOURCE_DIR}/src)
-rospack_add_java_executable(SimulationInterface edu.arizona.verbs.SimulationInterface)
+rospack_add_java_executable(interface edu.arizona.verbs.SimulationInterface) 
+rospack_add_java_executable(rtdp_test edu.arizona.test.RTDPTest)
