--- a/trunk/arrg/ua_experimental/verb_learning/CMakeLists.txt
+++ b/trunk/arrg/ua_experimental/verb_learning/CMakeLists.txt
@@ -1,14 +1,6 @@
 cmake_minimum_required(VERSION 2.4.6)
 include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-#set(ROS_BUILD_TYPE RelWithDebInfo)
-
 rosbuild_init()
 
 #set the default path for built executables to the "bin" directory
@@ -46,5 +38,4 @@ message("Java JNI path is ${_jniexe_path}")
 
 # Add source & executables
 add_java_source_dir(${PROJECT_SOURCE_DIR}/src)
-rospack_add_java_executable(interface edu.arizona.verbs.SimulationInterface) 
-rospack_add_java_executable(rtdp_test edu.arizona.test.RTDPTest)
+rospack_add_java_executable(interface edu.arizona.verbs.Interface) 
