--- a/arrg/ua_experimental/ultraspeech/CMakeLists.txt
+++ b/arrg/ua_experimental/ultraspeech/CMakeLists.txt
@@ -22,12 +22,14 @@ rosbuild_genmsg()
 #rosbuild_gensrv()
 
 #common commands for building c++ executables and libraries
+rosbuild_add_executable("ros_dvgrab" src/dvgrab-3.5/main.cc src/dvgrab-3.5/dvgrab.cc src/dvgrab-3.5/io.c src/dvgrab-3.5/raw1394util.c src/dvgrab-3.5/avi.cc src/dvgrab-3.5/dvframe.cc src/dvgrab-3.5/error.cc src/dvgrab-3.5/filehandler.cc src/dvgrab-3.5/frame.cc src/dvgrab-3.5/hdvframe.cc src/dvgrab-3.5/iec13818-1.cc src/dvgrab-3.5/iec13818-2.cc src/dvgrab-3.5/ieee1394io.cc src/dvgrab-3.5/riff.cc src/dvgrab-3.5/smiltime.cc src/dvgrab-3.5/srt.cc src/dvgrab-3.5/stringutils.cc src/dvgrab-3.5/v4l2reader.cc) 
 rosbuild_add_executable("jack_audio_capture" src/jack_audio_capture.cpp)
 rosbuild_add_executable("audio_clip_writer" src/audio_clip_writer.cpp)
 rosbuild_add_executable(${PROJECT_NAME} src/data_collect.cpp)
 target_link_libraries(${PROJECT_NAME} png)
 target_link_libraries("jack_audio_capture" jack)
 target_link_libraries("audio_clip_writer" sndfile)
+target_link_libraries("ros_dvgrab" raw1394 avc1394 rom1394 iec61883 dv m quicktime pthread z dl)
 rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
 #rosbuild_add_executable(example examples/example.cpp)
