--- a/arrg/ua_robots/wubble_description/params/shadow_filter.yaml
+++ b/arrg/ua_robots/wubble_description/params/shadow_filter.yaml
@@ -6,4 +6,9 @@ scan_filter_chain:
     max_angle: 170
     neighbors: 20
     window: 1
-
+- name: dark_shadows
+  type: LaserScanIntensityFilter
+  params:
+    lower_threshold: 100
+    upper_threshold: 10000
+    disp_histogram: 0
