--- a/arrg/ua_verbs/verb_learning/.project
+++ b/arrg/ua_verbs/verb_learning/.project
@@ -16,6 +16,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>client_rosjava</name>
+			<type>2</type>
+			<location>/home/dhewlett/ros/tum-ros-pkg/client_rosjava/rosjava/src</location>
+		</link>
+		<link>
 			<name>oomdp_msgs.msg</name>
 			<type>2</type>
 			<location>/home/dhewlett/ros/ua-ros-pkg/ua_experimental/oomdp_msgs/msg/java</location>
@@ -24,11 +29,6 @@
 			<name>oomdp_msgs.srv</name>
 			<type>2</type>
 			<location>/home/dhewlett/ros/ua-ros-pkg/ua_experimental/oomdp_msgs/srv/java</location>
-		</link>
-		<link>
-			<name>rosjava</name>
-			<type>2</type>
-			<location>/home/dhewlett/ros/client_rosjava/rosjava/src</location>
 		</link>
 	</linkedResources>
 </projectDescription>
