Code is in transitional state. Fixed some minor bugs in FSM code, added early IRLVerb, better debugging info in UCT

--- a/arrg/ua_verbs/verb_learning/.classpath
+++ b/arrg/ua_verbs/verb_learning/.classpath
@@ -36,6 +36,7 @@
 	<classpathentry kind="lib" path="lib/guava-r07.jar"/>
 	<classpathentry kind="lib" path="lib/snakeyaml-1.7.jar"/>
 	<classpathentry kind="lib" path="lib/weka.jar" sourcepath="lib/weka-src.jar"/>
+	<classpathentry kind="lib" path="lib/Jama-1.0.2.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/wubble_world_2d">
 		<attributes>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="wubble_world_2d/natives/linux"/>
